fixed bug where Linkinpedia URL was not saved
