# DataStructure/Tours/UpdateConcertRequestBo.cs
@@ -3,7 +3,7 @@ namespace LPCalendar.DataStructure.Tours;
 /// <summary>
 /// Request to create a new concert
 /// </summary>
-public class CreateConcertRequestDto
+public class UpdateConcertRequestBo
 {
     /// <summary>
     /// ID of the <see cref="ConcertTypeBo"/>
@@ -65,9 +65,19 @@ public class CreateConcertRequestDto
     /// Name of the file in the S3 bucket that contains the official schedule for this concert
     /// </summary>
     public string? ScheduleImageFile { get; set; }
+    
+    /// <summary>
+    /// Time when this concert was deleted
+    /// </summary>
+    public DateTimeOffset? DeletedAt { get; set; }
 
     /// <summary>
     /// Status of this concert
     /// </summary>
     public ConcertDto.ConcertStatusValue Status { get; set; }
+    
+    /// <summary>
+    /// URL to the concert page on Linkinpedia.
+    /// </summary>
+    public string? LinkinpediaUrl { get; set; }
 }
